# movie-rag-system

./: .env.example  .gitignore  .gitignore_new  README.md  cli.py  launch_app.bat  main.py  pyproject.toml  quick_test.py  requirements.txt  setup.bat  setup.sh  test_db_only.py  test_query_working.py
scripts/: add_sample_data.py  launch_streamlit.py
src/: app.py  cli.py  quick_test.py
src/crews/: __init__.py  movie_analysis_crew.py
src/models/: __init__.py  movie_data.py
src/rag/: __init__.py  movie_rag_system.py  vector_database.py
src/scrapers/: __init__.py  base_scraper.py  imdb_scraper.py  metacritic_scraper.py  rotten_tomatoes_scraper.py  scraper_manager.py
tests/: README.md  conftest.py  test_crews.py  test_models.py  test_rag_system.py  test_scrapers.py
